# llm-chatbot

./: .flake8  INSTALL_MAC_LINUX.md  INSTALL_WINDOWS.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  test_compute_impact.py  test_tools.py
.continue/prompts/: review-branch.md  write-tests-for-branch.md  write-tests.md
.continue/rules/: global-description.md
src/: __init__.py  app.py  chat_manager.py  chat_types.py  config.py  core_types.py  main.py  ui_components.py
src/modules/: __init__.py
src/modules/chat/: __init__.py  manager.py  types.py
src/modules/config/: __init__.py  pricing.py  settings.py  types.py
src/modules/ecologits/: compute_impact.py  exceptions.py  integration_example.py
src/modules/ecologits/data/: electricity_mixes.csv  models.json
src/modules/ecologits/impacts/: llm.py  modeling.py
src/modules/providers/: __init__.py  base.py  langchain_class.py  mistral_provider.py  openai_provider.py  tools.py  types.py
src/modules/tools/: __init__.py  builtin.py  registry.py  types.py
src/modules/ui/: __init__.py  components.py  types.py
src/providers/: __init__.py  base.py  mistral_provider.py  openai_provider.py
